[package]
name = "sras_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features =  [ "headers" ] }
axum-server = { version = "0.4", features = [ "tls-rustls" ] }
rustls = "0.21"
escape = { path = "../escape" }
mysql = { version = "23.0", default-features = false, features = ["minimal"] }

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
panic = "abort"     # Abort on panic

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[alias]
b = "build"
c = "check"
d = "doc"
t = "test"
r = "run --release"

[future-incompat-report]
frequency = 'always'